# tscan

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .travis.yml  AUTHORS  CITATION.cff  Dockerfile  Makefile.am  NEWS  README  README.md  bootstrap  bootstrap.sh  codemeta.json  configure.ac  cppcheck-suppressions-list.txt  decompound.sh  dependencies.cfg  docker-compose.yaml  downloaddata.sh  requirements.txt  setup.py  startfrog.sh  startwopr.sh  surprise.sh  sync_versions.py  tscan.cfg.example  tscanclient.py
.github/workflows/: cpp-check-service.sh  cpp-prep-alpino.sh  cpp-prep-dep.sh  cpp.yml  webservice.yml
config/: Makefile.am  tscan-frog.cfg  tscan-tokconfig-nl  tscan-tokconfig-nld
data/: .gitignore  Makefile.am  adverbs.data  afkortingen.lst  causal_connectors.lst  causaliteit.txt  compar_connectors.lst  contrast_connectors.lst  emoties.txt  formal.data  opsom_connectors.lst  opsom_connectors_wg.lst  opsom_connectors_zin.lst  prevalence.data  prevalence_be.data  ruimte.txt  temporal_connectors.lst  tijd.txt  voorzetsel_expressies.lst  voorzetseluitdrukkingen.txt
docker/: .gitignore  add-alpino.sh  apply-config.sh  build.sh  command.sh  config-example.sh  config.sh  install-alpino.sh
docker/ansible/tasks/: main.yml
docker/data/: .gitignore
docker/deployment/: add-alpino.sh  apply-config.sh  build-compound-splitter.sh  build.sh  clam_custom-example.config.yml  command.sh  config-example.sh  install-compound-splitter.sh  install.sh  prep-dep.sh  restart-projects.py  store-compound-splitter-dependencies.sh  store-dependencies.sh  tscan_webservice.nginx.conf
docker/deployment/roles/lamachine-core/tasks/: webserver.yml
docker/deployment/roles/tscan/tasks/: main.yml
docker/deployment/roles/tscan/templates/uwsgi/: tscan.ini
docker/deployment/runit.d/: alpino.run.sh  compound.run.sh  frog.run.sh  nginx.run.sh  uwsgi.run.sh  wopr02.run.sh  wopr20.run.sh
docker/log/: .gitignore
docker/roles/lamachine-core/tasks/: webserver.yml
docker/roles/lamachine-core/templates/: clam_base.config.yml
docker/roles/tscan/tasks/: main.yml
docs/: Makefile.am  naamwoordenclassificatie.txt
include/: Makefile.am
include/tscan/: Alpino.h  Configuration.h  Makefile.am  TscanServer.h  adverb.h  afk.h  cgn.h  conn.h  decomp.h  formal.h  general.h  generalnoun.h  intensify.h  ner.h  sem.h  situation.h  stats.h  surprise.h  utils.h
libtscan/: tscan.py
src/: Alpino.cxx  Configuration.cxx  Makefile.am  adverb.cxx  afk.cxx  cgn.cxx  conn.cxx  decomp.cxx  docstats.cxx  formal.cxx  general.cxx  generalnoun.cxx  intensify.cxx  ner.cxx  parstats.cxx  sem.cxx  sentstats.cxx  situation.cxx  structstats.cxx  surprise.cxx  test.sh  tscan.cxx  utils.cxx  wordstats.cxx
tests/: .gitignore  adjs_semtype.data  afk.example  afk.example.alpino  afk.example.ok  alpino_lookup.data  bug1.example  bug1.example.alpino  bug1.example.ok  bug2.example  bug2.example.alpino  bug2.example.ok  bug3.example  bug3.example.alpino  bug3.example.ok  bug4.example  bug4.example.alpino  bug4.example.ok  bug5.example  bug5.example.alpino  bug5.example.document.ok  bug5.example.ok  bug5.example.paragraphs.ok  bug5.example.sentences.ok  bug5.example.words.ok  concreet1.example  concreet1.example.alpino  concreet1.example.ok  concreet2.example  concreet2.example.alpino  concreet2.example.ok  concreet3.example  concreet3.example.alpino  concreet3.example.ok  connective1.example  connective1.example.alpino  connective1.example.ok  connective2.example  connective2.example.alpino  connective2.example.ok  (+210 more)
view/: ex1.xml  ex2.xml  tscanview.xsl
webservice/: .gitignore  MANIFEST.in  Makefile.am  gensim_lsa2_server.py  gensim_lsa_server.py  setup.py  startalpino.sh  startcompound.sh  startfrog.sh  startfrogserver.sh  startlsa.sh  startlsa2.sh  startwopr.sh  startwopr02.sh  startwopr20.sh  tscan.config.yml  tscan.py  tscanwrapper.py
webservice/tscanservice/: text_converter.py  tscan.config.yml  tscan.py  tscan.wsgi  tscanwrapper.py
webservice/tscanservice/tests/: test_text_converter.py
webservice/tscanservice/tests/data/: input-extension.doc  input-extension.docx  output-extension.doc.txt  output-extension.docx.txt  plaintext.doc.txt  plaintext.docx.txt  plaintext.txt
