# $Id: Makefile.am 14432 2012-03-09 10:17:55Z mvgompel $
# $URL: https://ilk.uvt.nl/svn/sources/ucto/trunk/config/Makefile.am $

config_DATA = tscan-tokconfig-nl 

configdir = $(sysconfdir)/$(PACKAGE)

frogconfig_DATA = tscan-frog.cfg

frogconfigdir = $(sysconfdir)/frog

EXTRA_DIST = $(config_DATA) $(frogconfig_DATA)

