# $Id: Makefile.am 14432 2012-03-09 10:17:55Z mvgompel $
# $URL: https://ilk.uvt.nl/svn/sources/ucto/trunk/config/Makefile.am $

uctoconfig_DATA = tscan-tokconfig-nl

uctoconfigdir = $(sysconfdir)/ucto

frogconfig_DATA = tscan-frog.cfg

frogconfigdir = $(sysconfdir)/frog

EXTRA_DIST = $(uctoconfig_DATA) $(frogconfig_DATA)

