# $Id $
# $URL$
config_DATA = adjs_semtype.data  nouns_semtype.data \
	polarity_lexicon.data  verbs_semtype.data \
	dcoi_staphformat.freq freqlist_sonarnews_lemma.freq freqlist_sonarnews_words20000.freq freqlist_sonarnews_words.freq freqlist_staphorsius_CLIB_lemma.freq freqlist_staphorsius_CLIB_words.freq SoNaR500.wordfreqlist20000.freq SoNaR500.wordfreqlist_lemma.freq SoNaR500.wordfreqlist_words.freq subtlex_words20000.freqsubtlex_words.freq

configdir = $(sysconfdir)/tscan

EXTRA_DIST = $(config_DATA)
