
config_DATA = adjs_semtype.data nouns_semtype.data \
	verbs_semtype.data intensiveringen.data dcoi_staphformat.freq \
	freqlist_sonarnews_lemma.freq freqlist_sonarnews_words20000.freq \
	freqlist_sonarnews_words.freq freqlist_staphorsius_CLIB_lemma.freq \
	freqlist_staphorsius_CLIB_words.freq \
	SoNaR500.wordfreqlist20000.freq SoNaR500.wordfreqlist_lemma.freq \
	SoNaR500.wordfreqlist_words.freq SoNaR500.withoutnames_wordfreqlist20000.freq \
	subtlex_words20000.freq subtlex_words.freq \
	temporal_connectors.lst causal_connectors.lst \
	opsom_connectors_wg.lst opsom_connectors_zin.lst \
	contrast_connectors.lst compar_connectors.lst \
	causaliteit.txt ruimte.txt tijd.txt emoties.txt \
	voorzetseluitdrukkingen.txt afkortingen.lst \
	general_nouns.data general_verbs.data adverbs.data \
	prevalence_nl.data prevalence_be.data

configdir = $(datadir)/tscan

EXTRA_DIST = $(config_DATA)
